Optimized brick-ball collision detection (final basic game version)

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>BreakOut</h1>
     <p id  = "startMenu">
-        <span>Schwierigkeitsgrad:</span>
+        <span>Select difficulty: </span>
         <select id="levelOfDifficulty">
-            <option id = "leicht">Leicht</option>
-            <option id = "mittel">Mittel</option>
-            <option id = "schwer">Schwer</option>
+            <option>Easy</option>
+            <option>Normal</option>
+            <option>Hard</option>
         </select>
         <input id = "startButton" type="button" value="Start">
     </p>
