Extensions added: Playerscore,kicker,background and powerups

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <script src="app/gameobjects/Ball.js"></script>
     <script src="app/gameobjects/Paddle.js"></script>
     <script src="app/gameobjects/Brick.js"></script>
+    <script src="app/gameobjects/Star.js"></script>
+    <script src="app/gameobjects/Powerup.js"></script>
     <script src="app/collisionChecker.js"></script>
     <script src="app/BreakOutGame.js"></script>
 </body>
